--- a/main.css
+++ b/main.css
@@ -1,4 +1,16 @@
+body{
+	margin:0;
+	padding:0;
+}
 #container{
-	margin:0 auto;
 	width:500px;
+	margin:0 auto;
+}
+input{
+	border-radius: 5%;
+	height:1.5em;
+	width:12em;
+	padding:0.5em;
+	font-size: 1.2em;
+	border:1px solid gray;
 }
