--- a/main.css
+++ b/main.css
@@ -1,16 +1,27 @@
 body{
 	margin:0;
 	padding:0;
+
 }
 #container{
 	width:500px;
 	margin:0 auto;
+	font-family:helvetica;
+	font-size: 1.2em;
 }
 input{
 	border-radius: 5%;
 	height:1.5em;
-	width:12em;
-	padding:0.5em;
-	font-size: 1.2em;
+	width:10em;
+	padding:0.3em;
 	border:1px solid gray;
+	font-family:helvetica;
+	font-size: 1.2em;
+	margin-bottom:1em;
+
+}
+label{
+	float:left;
+	width:150px;
+	padding-top:15px;
 }
